Latest changes in the business logic